k8s/infrastructure/base/routes.yaml
apiVersion: ec2.aws.upbound.io/v1beta1
kind: Route
metadata:
  name: public-internet
spec:
  forProvider:
    region: us-east-1
    routeTableIdSelector:
      matchLabels:
        app.kubernetes.io/name: rtb-public
    destinationCidrBlock: 0.0.0.0/0
    gatewayIdSelector:
      matchLabels:
        app.kubernetes.io/name: igw
  providerConfigRef:
    name: default
---
apiVersion: ec2.aws.upbound.io/v1beta1
kind: Route
metadata:
  name: private-nat
spec:
  forProvider:
    region: us-east-1
    routeTableIdSelector:
      matchLabels:
        app.kubernetes.io/name: rtb-private
    destinationCidrBlock: 0.0.0.0/0
    natGatewayIdSelector:
      matchLabels:
        app.kubernetes.io/name: nat
        zone: a
  providerConfigRef:
    name: default
